--- a/composer.json
+++ b/composer.json
@@ -33,10 +33,10 @@
     "php": ">=7.4",
     "composer/installers": "^1.8",
     "vlucas/phpdotenv": "^4.1.0",
-    "oscarotero/env": "^1.2.0",
-    "roots/wordpress": "5.3.2",
-    "roots/wp-config": "1.0.0",
-    "roots/wp-password-bcrypt": "1.0.0"
+    "oscarotero/env": "^1.2",
+    "roots/wordpress": "^5.3",
+    "roots/wp-config": "^1.0",
+    "roots/wp-password-bcrypt": "^1.0"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.5.4",
