--- a/composer.json
+++ b/composer.json
@@ -39,15 +39,30 @@
     "roots/wp-password-bcrypt": "^1.0"
   },
   "require-dev": {
-    "squizlabs/php_codesniffer": "^3.5.4",
-    "roave/security-advisories": "dev-master"
+    "comcast/php-legal-licenses": "^1.1",
+    "editorconfig-checker/editorconfig-checker": "^10.0",
+    "roave/security-advisories": "dev-master",
+    "squizlabs/php_codesniffer": "^3.5.4"
   },
-  "config": {
-    "optimize-autoloader": true,
-    "preferred-install": "dist"
+  "scripts": {
+    "post-root-package-install": [
+      "php -r \"copy('.env.example', '.env');\""
+    ],
+    "post-install-cmd": [
+        "@generate-licenses"
+    ],
+    "post-update-cmd": [
+        "@generate-licenses"
+    ],
+    "generate-licenses": [
+        "vendor/bin/php-legal-licenses generate",
+        "mkdir -p docs/licenses",
+        "mv licenses.md docs/licenses/project_dependencies_legal_licenses.md"
+    ],
+    "test": [
+      "phpcs"
+    ]
   },
-  "minimum-stability": "dev",
-  "prefer-stable": true,
   "extra": {
     "installer-paths": {
       "web/app/mu-plugins/{$name}/": ["type:wordpress-muplugin"],
@@ -56,12 +71,11 @@
     },
     "wordpress-install-dir": "web/wp"
   },
-  "scripts": {
-    "post-root-package-install": [
-      "php -r \"copy('.env.example', '.env');\""
-    ],
-    "test": [
-      "phpcs"
-    ]
-  }
+  "config": {
+    "optimize-autoloader": true,
+    "preferred-install": "dist",
+    "sort-packages": true
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
