--- a/composer.json
+++ b/composer.json
@@ -32,11 +32,12 @@
   "require": {
     "php": ">=7.4",
     "composer/installers": "^1.8",
-    "vlucas/phpdotenv": "^4.1.0",
     "oscarotero/env": "^1.2",
     "roots/wordpress": "^5.3",
     "roots/wp-config": "^1.0",
-    "roots/wp-password-bcrypt": "^1.0"
+    "roots/wp-password-bcrypt": "^1.0",
+    "vlucas/phpdotenv": "^4.1.0",
+    "wpackagist-plugin/disable-comments": "^1.10"
   },
   "require-dev": {
     "comcast/php-legal-licenses": "^1.1",
