--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,10 +12,13 @@ services:
     # links:
       # - php
     networks:
-      - scrw_internal
+      # - scrw_external
+      scrw_internal:
+        ipv4_address: 172.48.10.0
     environment:
-      - DATABASE_URL='mysql://wp_db_user:wp_db_password@172.28.0.3:3306/wordpress'
-      # - DB_HOST=${DB_HOST:-172.28.0.3}
+      # - DATABASE_URL='mysql://wp_db_user:wp_db_password@172.28.0.2:3306/wordpress'
+      - DB_HOST=${DB_HOST:-172.48.20.0}
+      - WP_HOME=${DB_HOST:-http://172.48.10.0}
     labels:
       - 'scrw.backend=${APP_NAME}'
       - 'scrw.docker.network=scrw_wp_external'
@@ -33,28 +36,38 @@ services:
       #   target: .cache/app/uploads
 
   database:
-    image: mariadb:latest
+    image: mysql:latest
     container_name: ${APP_NAME}_mysql
     restart: always
     ports:
       - '3306:3306'
+    # command: [
+    #     '--default_authentication_plugin=mysql_native_password',
+    #     '--character-set-server=utf8mb4',
+    #     '--collation-server=utf8mb4_unicode_ci'
+    # ]
     networks:
       scrw_internal:
-          ipv4_address: 172.28.0.3
-    # networks:
-    #   scrw_internal:
-    #       ipv4_address: 172.28.0.3
+          ipv4_address: 172.48.20.0
     environment:
-      MYSQL_ROOT_PASSWORD: changeme
-      MYSQL_DATABASE: mybb
-      MYSQL_USER: mybb
-      MYSQL_PASSWORD: changeme
+      ## Use % to allow remote access to all addresses. 
+      ## Generally not recommended by some people to allow for root.
+      # MYSQL_ROOT_HOST: '%'
+      # MYSQL_ROOT_HOST: '172.28.0.2/255.255.255.248'
+      MYSQL_ROOT_PASSWORD: scrw_db_root_password
+      # MYSQL_USER: mybb
+      # MYSQL_PASSWORD: password
+      # MYSQL_DATABASE: mybb
       # - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD:-password}
-      # - MYSQL_USER=${MYSQL_USER:-wp_db_user}
-      # - MYSQL_PASSWORD=${MYSQL_PASSWORD:-wp_db_password}
-      # - MYSQL_DATABASE=${MYSQL_DATABASE:-wordpress}
+      MYSQL_USER: ${DB_USER:-scrw_wp_user}
+      MYSQL_PASSWORD: ${DB_PASSWORD:-scrw_wp_password}
+      MYSQL_DATABASE: ${DB_NAME:-scrw_wp_db}
+    # volumes:
+    #   - '.cache/database:/var/lib/mysql'
     volumes:
       - '.cache/database:/var/lib/mysql'
+    # volumes:
+    #   - 'mysql_data:/var/lib/mysql'
 
   # php:
   #   restart: always
@@ -82,27 +95,36 @@ services:
       - 5780:8080
     depends_on:
       - database
-    labels:
-      - 'scrw.enable=true'
-      - 'scrw.backend=${APP_NAME}_adminer'
-      - 'scrw.frontend.rule=Host:adminer.scrw.local'
-      - 'scrw.docker.network=web'
-      - 'scrw.docker.port=8080'
+    links:
+      - database
+    # labels:
+      # - 'scrw.enable=true'
+      # - 'scrw.backend=${APP_NAME}_adminer'
+      # - 'scrw.frontend.rule=Host:adminer.scrw.local'
+      # - 'scrw.docker.network=web'
+      # - 'scrw.docker.port=8080'
     networks:
-      - scrw_internal
-      - scrw_external
+      scrw_internal:
+          ipv4_address: 172.48.30.0
+      # - scrw_external
 
 networks:
-  scrw_external:
-    driver: bridge
-    # external: false
+  # scrw_external:
   scrw_internal:
     driver: bridge
-    # ipam:
-    #   config:
-    #     - subnet: 172.28.0.0/24
+    ipam:
+      config:
+        - subnet: 172.48.0.0/16
 
 # volumes:
-#   uploads:
+#   # mysql_data:
+#   #   driver: local
+#   mysql:
+#     driver: local
+#     driver_opts:
+#       device: $PWD/.cache/
+
+    
+
 
 # 172.28.0.2
