--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
-DB_NAME='database_name'
-DB_USER='database_user'
-DB_PASSWORD='database_password'
+APP_NAME=tpl-project-wordpress
+
+DB_NAME=scrw_wp_user
+DB_USER=scrw_wp_db
+DB_PASSWORD=scrw_wp_password
 
 # Optionally, you can use a data source name (DSN)
 # When using a DSN, you can remove the DB_NAME, DB_USER, DB_PASSWORD, and DB_HOST variables
