--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,9 @@
     "roots/wp-config": "^1.0",
     "roots/wp-password-bcrypt": "^1.0",
     "vlucas/phpdotenv": "^4.1.0",
+    "wpackagist-plugin/amazon-polly": "^4.0",
     "wpackagist-plugin/disable-comments": "^1.10"
+
   },
   "require-dev": {
     "comcast/php-legal-licenses": "^1.1",
