--- a/.docker/supervisor/supervisord.conf
+++ b/.docker/supervisor/supervisord.conf
@@ -35,10 +35,11 @@ autorestart=true
 priority=5
 stdout_events_enabled=true
 stderr_events_enabled=true
-stdout_logfile=NONE
+stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
-stderr_logfile=NONE
+stderr_logfile=/dev/stdout
 stderr_logfile_maxbytes=0
+redirect_stderr=true
 
 [program:nginx]
 command=/usr/sbin/nginx -g "daemon off;"
@@ -47,7 +48,8 @@ autorestart=true
 priority=10
 stdout_events_enabled=true
 stderr_events_enabled=true
-stdout_logfile=NONE
+stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
-stderr_logfile=NONE
+stderr_logfile=/dev/stdout
 stderr_logfile_maxbytes=0
+redirect_stderr=true
