--- a/.docker/php-fpm/pool.app.conf
+++ b/.docker/php-fpm/pool.app.conf
@@ -421,3 +421,5 @@ clear_env = no
 php_admin_value[error_log] = /var/log/php/php7.4-fpm.app.log
 ;php_admin_flag[log_errors] = on
 ;php_admin_value[memory_limit] = 32M
+
+decorate_workers_output = no
