--- a/.docker/supervisor/supervisord.conf
+++ b/.docker/supervisor/supervisord.conf
@@ -35,10 +35,10 @@ autorestart=true
 priority=5
 stdout_events_enabled=true
 stderr_events_enabled=true
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stdout
-stderr_logfile_maxbytes=0
+;stdout_logfile=/dev/stdout
+;stdout_logfile_maxbytes=0
+;stderr_logfile=/dev/stdout
+;stderr_logfile_maxbytes=0
 redirect_stderr=true
 
 [program:nginx]
@@ -48,8 +48,8 @@ autorestart=true
 priority=10
 stdout_events_enabled=true
 stderr_events_enabled=true
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stdout
-stderr_logfile_maxbytes=0
+;stdout_logfile=/dev/stdout
+;stdout_logfile_maxbytes=0
+;stderr_logfile=/dev/stdout
+;stderr_logfile_maxbytes=0
 redirect_stderr=true
