--- a/.docker/nginx/nginx.conf
+++ b/.docker/nginx/nginx.conf
@@ -61,7 +61,7 @@ http {
     ##
 
     access_log off;
-    error_log /var/log/nginx/error.log warn;
+    error_log /dev/stderr warn;
 
     ##
     # Gzip Settings
