--- a/.docker/nginx/site.conf
+++ b/.docker/nginx/site.conf
@@ -9,8 +9,8 @@ server {
     server_name_in_redirect off;
 
     ## Logs
-    access_log /var/log/nginx/app_access.log;
-    error_log /var/log/nginx/app_error.log;
+    access_log /dev/stdout;
+    error_log /dev/stderr;
 
     index index.php index.html;
 
@@ -25,13 +25,6 @@ server {
         access_log off;
     }
 
-
-    location / {
-        try_files $uri $uri/ /index.php?$args;
-    }
-
-    
-
     ## Security
     location ~ /(wp-config.php|readme.html|licence.txt) {
         return 404;
@@ -39,6 +32,30 @@ server {
 
     location ~ /\. {
         deny all;
+    }
+
+    ## Wordpress plugins
+
+    # BEGIN W3TC Page Cache core
+    set $w3tc_rewrite 1;
+    if ($request_method = POST) {
+        set $w3tc_rewrite 0;
+    }
+
+    # BEGIN W3TC Page Cache cache
+    location ~ /app/cache/page_enhanced.*gzip$ {
+        gzip off;
+        types {}
+        default_type text/html;
+        add_header Content-Encoding gzip;
+        etag on;
+        if_modified_since exact;
+        add_header Referrer-Policy "no-referrer-when-downgrade";
+    }
+    # END W3TC Page Cache cache
+
+    location / {
+        try_files $uri $uri/ /index.php?$args;
     }
 
     location ~ \.php$ {
