--- a/.docker/php-fpm/php.ini
+++ b/.docker/php-fpm/php.ini
@@ -1835,13 +1835,13 @@ opcache.dups_fix=1
 ;opcache.force_restart_timeout=180
 
 ; OPcache error_log file name. Empty string assumes "stderr".
-;opcache.error_log=
+opcache.error_log=/dev/stderr
 
 ; All OPcache errors go to the Web server log.
 ; By default, only fatal errors (level 0) or errors (level 1) are logged.
 ; You can also enable warnings (level 2), info messages (level 3) or
 ; debug messages (level 4).
-;opcache.log_verbosity_level=1
+;opcache.log_verbosity_level=3
 
 ; Preferred Shared Memory back-end. Leave empty and let the system decide.
 ;opcache.preferred_memory_model=
