--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_NAME=tpl-project-wordpress
 
-DB_NAME=scrw_wp_user
-DB_USER=scrw_wp_db
+DB_NAME=scrw_wp_db
+DB_USER=scrw_wp_user
 DB_PASSWORD=scrw_wp_password
 
 # Optionally, you can use a data source name (DSN)
@@ -12,8 +12,8 @@ DB_PASSWORD=scrw_wp_password
 # DB_HOST='localhost'
 # DB_PREFIX='wp_'
 
-WP_ENV='development'
-WP_HOME='http://example.com'
+WP_ENV='local'
+WP_HOME='http://172.48.10.0'
 WP_SITEURL="${WP_HOME}/wp"
 
 # Generate your keys here: https://roots.io/salts.html
