--- a/.docker/php-fpm/pool.app.conf
+++ b/.docker/php-fpm/pool.app.conf
@@ -256,7 +256,7 @@ pm.max_requests = 0
 
 ; The access log file
 ; Default: not set
-;access.log = log/php7/$pool.access.log
+access.log = /dev/stdout
 
 ; The access log format.
 ; The following syntax is allowed
@@ -320,7 +320,7 @@ pm.max_requests = 0
 ; The log file for slow requests
 ; Default Value: not set
 ; Note: slowlog is mandatory if request_slowlog_timeout is set
-;slowlog = log/php7/$pool.slow.log
+slowlog = /dev/stdout
 
 ; The timeout for serving a single request after which a PHP backtrace will be
 ; dumped to the 'slowlog' file. A value of '0s' means 'off'.
@@ -418,8 +418,8 @@ clear_env = no
 ;                specified at startup with the -d argument
 ;php_admin_value[sendmail_path] = /usr/sbin/sendmail -t -i -f www@my.domain.com
 ;php_flag[display_errors] = off
-php_admin_value[error_log] = /var/log/php/php7.4-fpm.app.log
-;php_admin_flag[log_errors] = on
+php_admin_value[error_log] = /dev/stdout
+php_admin_flag[log_errors] = on
 ;php_admin_value[memory_limit] = 32M
 
 decorate_workers_output = no
