--- a/.docker/supervisor/supervisord.conf
+++ b/.docker/supervisor/supervisord.conf
@@ -2,10 +2,10 @@
 file=/dev/shm/supervisor.sock   ; (the path to the socket file)
 
 [supervisord]
-logfile=/var/log/supervisor/supervisord.log ; (main log file;default $CWD/supervisord.log)
-logfile_maxbytes=50MB        ; (max main logfile bytes b4 rotation;default 50MB)
-logfile_backups=10           ; (num of main logfile rotation backups;default 10)
-loglevel=warn                ; (log level;default info; others: debug,warn,trace)
+logfile=/dev/null 			 ; (main log file;default $CWD/supervisord.log)
+logfile_maxbytes=0       	 ; (max main logfile bytes b4 rotation;default 50MB)
+logfile_backups=0            ; (num of main logfile rotation backups;default 10)
+loglevel=debug               ; (log level;default info; others: debug,warn,trace)
 pidfile=/run/supervisord/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
 nodaemon=false               ; (start in foreground if true;default false)
 minfds=1024                  ; (min. avail startup file descriptors;default 1024)
@@ -33,13 +33,14 @@ command = /usr/sbin/php-fpm7.4 --nodaemonize --fpm-config /etc/php/7.4/fpm/pool.
 autostart=true
 autorestart=true
 priority=5
+catch_workers_output = Yes
 stdout_events_enabled=true
 stderr_events_enabled=true
-;stdout_logfile=/dev/stdout
-;stdout_logfile_maxbytes=0
-;stderr_logfile=/dev/stdout
-;stderr_logfile_maxbytes=0
-redirect_stderr=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+redirect_stderr=false
 
 [program:nginx]
 command=/usr/sbin/nginx -g "daemon off;"
@@ -48,8 +49,8 @@ autorestart=true
 priority=10
 stdout_events_enabled=true
 stderr_events_enabled=true
-;stdout_logfile=/dev/stdout
-;stdout_logfile_maxbytes=0
-;stderr_logfile=/dev/stdout
-;stderr_logfile_maxbytes=0
-redirect_stderr=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+redirect_stderr=false
