--- a/composer.json
+++ b/composer.json
@@ -38,8 +38,9 @@
     "roots/wp-password-bcrypt": "^1.0",
     "vlucas/phpdotenv": "^4.1.0",
     "wpackagist-plugin/amazon-polly": "^4.0",
-    "wpackagist-plugin/disable-comments": "^1.10"
-
+    "wpackagist-plugin/disable-comments": "^1.10",
+    "wpackagist-plugin/w3-total-cache": "^0.13",
+    "wpackagist-plugin/wp-maintenance-mode": "^2.2"
   },
   "require-dev": {
     "comcast/php-legal-licenses": "^1.1",
