--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,10 @@
     "vlucas/phpdotenv": "^4.1.0",
     "wpackagist-plugin/amazon-polly": "^4.0",
     "wpackagist-plugin/disable-comments": "^1.10",
+    "wpackagist-plugin/getwid": "^1.5",
+    "wpackagist-plugin/mailgun": "^1.7",
+    "wpackagist-plugin/twentig": "^0.9.0",
+    "wpackagist-plugin/typeform": "^1.3",
     "wpackagist-plugin/w3-total-cache": "^0.13",
     "wpackagist-plugin/wp-maintenance-mode": "^2.2"
   },
