--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - DB_HOST=${DB_HOST:-172.48.20.0}
       - WP_HOME=${WP_HOME:-http://172.48.10.0}
       - REDIS_SERVERS=${REDIS_SERVERS:-172.48.20.1}
+      - WP_CACHE=${WP_CACHE:-false}
     labels:
       - 'scrw.backend=${APP_NAME}'
       - 'scrw.docker.network=scrw_wp_external'
