--- a/.docker/nginx/site.conf
+++ b/.docker/nginx/site.conf
@@ -14,6 +14,16 @@ server {
 
     index index.php index.html;
 
+    ## Status checks
+    location /nginx-status {
+      stub_status on;
+      #access_log   off;
+      access_log /dev/stdout;
+      #allow 1.1.1.1;
+      #deny all;
+    }
+
+
     location = /favicon.ico {
         log_not_found off;
         access_log off;
@@ -24,6 +34,7 @@ server {
         log_not_found off;
         access_log off;
     }
+
 
     ## Security
     location ~ /(wp-config.php|readme.html|licence.txt) {
