--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,16 @@
+## Global
 APP_NAME=tpl-project-wordpress
+WP_ENV=dev
 
-DB_NAME=scrw_wp_db
+## Routing
+WP_HOME=localhost
+WP_SITEURL="${WP_HOME}/wp"
+
+## Database
+DB_HOST=localhost
 DB_USER=scrw_wp_user
 DB_PASSWORD=scrw_wp_password
-
-# Optionally, you can use a data source name (DSN)
-# When using a DSN, you can remove the DB_NAME, DB_USER, DB_PASSWORD, and DB_HOST variables
-# DATABASE_URL='mysql://database_user:database_password@database_host:database_port/database_name'
-
-# Optional variables
-# DB_HOST='localhost'
-# DB_PREFIX='wp_'
-
-WP_ENV='local'
-WP_HOME='http://172.48.10.0'
-WP_SITEURL="${WP_HOME}/wp"
+DB_NAME=scrw_wp_db
 
 # Generate your keys here: https://roots.io/salts.html
 AUTH_KEY='generateme'
