--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,9 @@ phpunit-printer.yml
 ## Wordpress project
 web/app/plugins/*
 web/app/mu-plugins/*/
-web/app/mu-plugins/installable_*.php
+!web/app/mu-plugins/installable
+web/app/mu-plugins/installable/*
+web/app/mu-plugins/_installable_*.php
 web/app/upgrade
 web/app/uploads/*
 web/wp
