--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,9 @@ services:
         ipv4_address: 172.48.10.0
     environment:
       - DB_HOST=${DB_HOST:-172.48.20.0}
-      - WP_HOME=${WP_HOME:-http://172.48.10.0}
       - REDIS_SERVERS=${REDIS_SERVERS:-172.48.20.1:6379}
+      - WP_ENV=${WP_ENV:-local}
+      - WP_HOME=${WP_HOME:-http://172.48.10.0}
       - WP_CACHE=${WP_CACHE:-false}
     labels:
       - 'scrw.backend=${APP_NAME}'
