--- a/.docker/nginx/nginx.conf
+++ b/.docker/nginx/nginx.conf
@@ -34,7 +34,7 @@ http {
     # server_tokens off;
     # disable_symlinks off;
 
-    # client_max_body_size 20m;
+    client_max_body_size 20m;
     # client_body_buffer_size 128K;
     # client_header_buffer_size 1k;
     # large_client_header_buffers 4 4k;
