--- a/.docker/nginx/site.conf
+++ b/.docker/nginx/site.conf
@@ -72,6 +72,16 @@ server {
     add_header Referrer-Policy "no-referrer-when-downgrade";
     # END W3TC Browser Cache
 
+    # BEGIN W3TC CDN
+    location ~ \.(ttf|ttc|otf|eot|woff|woff2|font.css)$ {
+        expires 31536000s;
+        etag on;
+        if_modified_since exact;
+        add_header Referrer-Policy "no-referrer-when-downgrade";
+        add_header Access-Control-Allow-Origin "*";
+    }
+    # END W3TC CDN
+
 
     ##################################
     ## End Wordpress plugins config ##
