--- a/composer.json
+++ b/composer.json
@@ -37,14 +37,14 @@
     "roots/wp-config": "^1.0",
     "roots/wp-password-bcrypt": "^1.0",
     "vlucas/phpdotenv": "^4.1.0",
-    "wpackagist-plugin/amazon-polly": "^4.0",
     "wpackagist-plugin/disable-comments": "^1.10",
     "wpackagist-plugin/getwid": "^1.5",
     "wpackagist-plugin/mailgun": "^1.7",
+    "wpackagist-plugin/simple-history": "^2.33",
     "wpackagist-plugin/twentig": "^0.9.0",
     "wpackagist-plugin/typeform": "^1.3",
     "wpackagist-plugin/w3-total-cache": "^0.13",
-    "wpackagist-plugin/wordpress-seo": "^13.5",
+    "wpackagist-plugin/wordpress-seo": "^14.0",
     "wpackagist-plugin/wp-maintenance-mode": "^2.2"
   },
   "require-dev": {
@@ -78,6 +78,7 @@
     ],
     "wp:plugins:move-to-mu": [
       "find web/app/mu-plugins/ -mindepth 1 -maxdepth 1 -type f -iname '_installable*.php' -delete",
+      "echo '<?php \nrequire WPMU_PLUGIN_DIR.\"/installable/simple-history/index.php\";' > web/app/mu-plugins/_installable_simple-history.php",
       "echo '<?php \nrequire WPMU_PLUGIN_DIR.\"/installable/w3-total-cache/w3-total-cache.php\";' > web/app/mu-plugins/_installable_w3-total-cache.php"
     ],
     "test": [
@@ -87,7 +88,7 @@
   "extra": {
     "installer-paths": {
       "web/app/mu-plugins/{$name}/": ["type:wordpress-muplugin"],
-      "web/app/mu-plugins/installable/{$name}/": ["wpackagist-plugin/w3-total-cache"],
+      "web/app/mu-plugins/installable/{$name}/": ["wpackagist-plugin/simple-history", "wpackagist-plugin/w3-total-cache"],
       "web/app/plugins/{$name}/": ["type:wordpress-plugin"],
       "web/app/themes/{$name}/": ["type:wordpress-theme"]
     },
