--- a/.env.example
+++ b/.env.example
@@ -8,9 +8,9 @@ WP_SITEURL="${WP_HOME}/wp"
 
 ## Database
 DB_HOST=localhost
-DB_USER=scrw_wp_user
-DB_PASSWORD=scrw_wp_password
-DB_NAME=scrw_wp_db
+DB_USER=scrw_db_user
+DB_PASSWORD=scrw_db_password
+DB_NAME=scrw_db
 
 # Generate your keys here: https://roots.io/salts.html
 AUTH_KEY='generateme'
