--- a/.docker/nginx/site.conf
+++ b/.docker/nginx/site.conf
@@ -56,19 +56,33 @@ server {
         expires 31536000s;
         etag on;
         if_modified_since exact;
+        add_header Pragma "public";
+        add_header Cache-Control "public";
+        add_header X-Frame-Options "DENY";
+        add_header Referrer-Policy "no-referrer-when-downgrade";
         try_files $uri $uri/ /index.php?$args;
     }
     location ~ \.(html|htm|rtf|rtx|txt|xsd|xsl|xml)$ {
+        expires 3600s;
         etag on;
         if_modified_since exact;
+        add_header Pragma "public";
+        add_header Cache-Control "public";
+        add_header X-Frame-Options "DENY";
+        add_header Referrer-Policy "no-referrer-when-downgrade";
         try_files $uri $uri/ /index.php?$args;
     }
     location ~ \.(asf|asx|wax|wmv|wmx|avi|bmp|class|divx|doc|docx|exe|gif|gz|gzip|ico|jpg|jpeg|jpe|webp|json|mdb|mid|midi|mov|qt|mp3|m4a|mp4|m4v|mpeg|mpg|mpe|webm|mpp|_otf|odb|odc|odf|odg|odp|ods|odt|ogg|pdf|png|pot|pps|ppt|pptx|ra|ram|svg|svgz|swf|tar|tif|tiff|_ttf|wav|wma|wri|xla|xls|xlsx|xlt|xlw|zip)$ {
         expires 31536000s;
         etag on;
         if_modified_since exact;
+        add_header Pragma "public";
+        add_header Cache-Control "public";
+        add_header X-Frame-Options "DENY";
+        add_header Referrer-Policy "no-referrer-when-downgrade";
         try_files $uri $uri/ /index.php?$args;
     }
+    add_header X-Frame-Options "DENY";
     add_header Referrer-Policy "no-referrer-when-downgrade";
     # END W3TC Browser Cache
 
@@ -77,11 +91,13 @@ server {
         expires 31536000s;
         etag on;
         if_modified_since exact;
+        add_header Pragma "public";
+        add_header Cache-Control "public";
+        add_header X-Frame-Options "DENY";
         add_header Referrer-Policy "no-referrer-when-downgrade";
         add_header Access-Control-Allow-Origin "*";
     }
     # END W3TC CDN
-
 
     ##################################
     ## End Wordpress plugins config ##
