--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,15 +17,16 @@ services:
       - DB_USER=${DB_USER:-scrw_db_user}
       - DB_PASSWORD=${DB_PASSWORD:-scrw_db_password}
       - DB_NAME=${DB_NAME:-scrw_db}
-      - REDIS_SERVERS=${REDIS_SERVERS:-localhost:6379}
+      - REDIS_SERVERS=redis
       - WP_ENV=${WP_ENV:-local}
       - WP_HOME=${WP_HOME:-http://localhost:9080}
       - WP_CACHE=${WP_CACHE:-false}
-      - AWS_IAM_KEY="AWS_IAM_KEY"
-      - AWS_IAM_SECRET="AWS_IAM_SECRET"
-      - AWS_S3_BUCKET="AWS_S3_BUCKET"
-      - AWS_S3_BUCKET_REGION="AWS_S3_BUCKET_REGION"
-      - AWS_CLOUDFRONT_DOMAIN="AWS_CLOUDFRONT_DOMAIN"
+      - AWS_IAM_KEY=AWS_IAM_KEY
+      - AWS_IAM_SECRET=AWS_IAM_SECRET
+      - AWS_S3_BUCKET=AWS_S3_BUCKET
+      - AWS_S3_BUCKET_REGION=AWS_S3_BUCKET_REGION
+      - AWS_CLOUDFRONT_DOMAIN=AWS_CLOUDFRONT_DOMAIN
+      - AWS_CLOUDFRONT_ID=AWS_CLOUDFRONT_ID
     #labels:
     #  - 'scrw.backend=${APP_NAME}'
     #  - 'scrw.docker.network=scrw_wp_external'
