--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,7 @@ services:
       - AWS_IAM_SECRET=AWS_IAM_SECRET
       - AWS_S3_BUCKET=AWS_S3_BUCKET
       - AWS_S3_BUCKET_REGION=AWS_S3_BUCKET_REGION
-      - AWS_CLOUDFRONT_DOMAIN=AWS_CLOUDFRONT_DOMAIN
-      - AWS_CLOUDFRONT_ID=AWS_CLOUDFRONT_ID
+      - AWS_CLOUDFRONT_DOMAIN=d604721fxaaqy9.cloudfront.net
     #labels:
     #  - 'scrw.backend=${APP_NAME}'
     #  - 'scrw.docker.network=scrw_wp_external'
